# KuLaSmartContract

./: .gitignore
ido/: Cargo.toml  TESTING.md  build.sh  deploy.sh  dev-deploy.sh  migrate.sh
ido /src/: lib.rs  utils.rs
ido /src/structures/: account.rs  project.rs  project_internal.rs
ido/src/: ft_contract.rs  lib.rs  modules.rs  staking_contract.rs  structures.rs  tests.rs  utils.rs
ido/src/modules/: account.rs  project.rs  project_internal.rs  testing.rs  tier.rs  xtoken.rs
ido/src/sim_test/: ido_test.rs  main.rs  staking_test.rs
ido/src/structures/: account.rs  internal.rs  project.rs  project_internal.rs  staking.rs  ticket.rs
ido/src/tests/: project_internal.rs  test_account.rs  test_buytoken.rs  test_emulator.rs  test_full_flow.rs  test_project.rs  test_staking.rs  (+3 more)
neardev/: dev-account  dev-account.env
res/: KuLaPad_ido.wasm  KuLaPad_staking.wasm  KuLaPad_token.wasm
staking-pool/: Cargo.toml  README.md  TESTING.md  build.sh  deploy.sh  near_call.sh  near_call_dev.sh
staking-pool/neardev/: dev-account  dev-account.env
staking-pool/res/: staking-contract.wasm  staking_pool.wasm
staking-pool/src/: account.rs  core_impl.rs  enumeration.rs  internal.rs  lib.rs  modules.rs  structures.rs  test_utils.rs
staking-pool/src/modules/: account.rs  tier.rs
staking-pool/src/structures/: account.rs  tier.rs
staking-pool/tests/simulation-tests/: main.rs  utils.rs
token-factory/: .gitignore  Cargo.toml  build.sh  deploy.sh  mint.sh  token_factory.wasm
token-factory/src/: lib.rs
whitelist/: Cargo.toml  build.sh
whitelist/src/: lib.rs
(+7 files in other folders)
